@@ -11,7 +11,11 @@ CHANGES
     - prevent the namechooser from failing on '+', '@' and '/'
     - added tests in the namechooser
     - be sure the name chooser returns unicode
-
+- fixed #175388 : the setitem's size modification is now done in setitemf:
+  setting an existing item does not change the size,
+  and the event subscribers should see the new size instead of the old size.
+- Reimplemented the BTreeContainer so that it directly accesses the btree
+  methods (removed an old #TODO)
 
 3.6.0 (2008-05-06)
 ------------------
